2006-09-15  Brian Bidulock  <bidulock@openss7.org>

	* src/util/sysconfig/netconfig: added default netconfig file (will
	  install)
	* src/lib/netdir.c: added new files for libxnsl library
	* src/lib/netdir_inet.c: added new files for libxnsl library
	* src/lib/netselect.c: added new files for libxnsl library
	* src/lib/netselect.h: added new files for libxnsl library
	* src/lib/pthread.c: added new files for libxnsl library
	* src/lib/xnet.VERSION: added new files for libxnsl library
	* src/lib/xnsl.VERSION: added new files for libxnsl library
	* src/test/test-xnsl.c: added new files for libxnsl library

	* src/include/netdir.h: working up library
	* src/include/sys/netconfig.h: working up library
	* src/lib/xnet.c: working up library
	* src/lib/xnsl.c: working up library

	* doc/man/man3/_nderror.3.man: updated manual pages
	* doc/man/man3/endnetconfig.3.man: updated manual pages
	* doc/man/man3/endnetpath.3.man: updated manual pages
	* doc/man/man3/freenetconfigent.3.man: updated manual pages
	* doc/man/man3/getnetconfig.3.man: updated manual pages
	* doc/man/man3/getnetconfigent.3.man: updated manual pages
	* doc/man/man3/getnetpath.3.man: updated manual pages
	* doc/man/man3/nc_perror.3.man: updated manual pages
	* doc/man/man3/nc_sperror.3.man: updated manual pages
	* doc/man/man3/netconfig.3.man: updated manual pages
	* doc/man/man3/netdir.3.man: updated manual pages
	* doc/man/man3/netdir_free.3.man: updated manual pages
	* doc/man/man3/netdir_getbyaddr.3.man: updated manual pages
	* doc/man/man3/netdir_getbyname.3.man: updated manual pages
	* doc/man/man3/netdir_options.3.man: updated manual pages
	* doc/man/man3/netdir_perror.3.man: updated manual pages
	* doc/man/man3/netdir_sperror.3.man: updated manual pages
	* doc/man/man3/netpath.3.man: updated manual pages
	* doc/man/man3/setnetconfig.3.man: updated manual pages
	* doc/man/man3/setnetpath.3.man: updated manual pages
	* doc/man/man3/taddr2uaddr.3.man: updated manual pages