@@ -1,2 +1,4 @@
 XNET_1.0 {
+	__xnet_*;
+	_xnet_*;
 };
