@@ -1,2 +1,3 @@
 XNSL_1.0 {
+	__nsl_*;
 };
